--- a/style.css
+++ b/style.css
@@ -1,288 +1,374 @@
-@import url("https://fonts.googleapis.com/css2?family=Jacques+Francois+Shadow&display=swap");
 * {
-	font-family: "Nunito", sans-serif;
-	margin: 0;
 	padding: 0;
+	margin: 0;
 	box-sizing: border-box;
-	outline: none;
-	border: none;
-	text-decoration: none;
-	text-transform: capitalize;
-	transition: all 0.2s linear;
-}
-
-html {
-	font-size: 62.5%;
-	overflow: hidden;
 }
 
 body {
-	background: #212531;
-	margin: 0;
+	background-color: rgb(255, 255, 255);
+	color: rgb(0, 0, 0);
+	font-family: "Fira Sans", sans-serif;
+	background-color: white;
 }
 
-header {
-	margin: 0px;
+nav {
+	width: 100%;
+	height: 80px;
+	display: flex;
+	justify-content: space-between;
+	padding: 20px 5%;
+	background-color: #1385a5;
 }
 
-<!--  styling the navigation menu -- >
-
-a {
-	text-decoration: none;
-	color: #000;
+nav .heading {
+	font-size: 30px;
+	font-weight: 700;
+	color: white;
 }
 
-ul {
+nav ul {
+	display: flex;
 	list-style: none;
 }
 
-section {
-	padding: 2rem 9%;
+nav ul li {
+	padding: 8px 15px;
+	border-radius: 10px;
+	transition: 0.2s ease-in;
 }
 
-.logo {
-	font-size: 2.5rem;
+nav ul li a {
+	color: black;
+	font-size: 20px;
+	font-weight: 500;
+	text-decoration: none;
+	color: rgb(255, 255, 255);
+}
+
+nav ul li:hover {
+	background-color: rgb(0, 68, 128);
+}
+
+nav ul li a:hover {
+	color: rgb(255, 255, 255);
+}
+
+nav .sideMenuButton {
+	font-size: 30px;
 	font-weight: bolder;
-	color: #666;
-	display: inline-block;
-}
-
-.logo i {
-	padding-right: 2rem;
-	color: black;
-}
-
-.order {
-	text-shadow: -1px -1px 0 yellow, 1px -1px 0 yellow, -1px 1px 0 yellow, 1px 1px yellow;
-}
-
-.nav {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: space-between;
-	background: white;
-	color: black;
-	height: 65px;
-	padding: 1em;
-	font-size: 25px;
-}
-
-.menu li:hover {
 	cursor: pointer;
-	transform: scale(1.2);
-}
-
-.menu {
-	display: flex;
-	flex-direction: row;
-	list-style-type: none;
-	margin: 0;
-}
-
-.menu>li {
-	margin: 0 1rem;
-	overflow: hidden;
-}
-/*Container for menu button  */
-
-.menu-button-container {
 	display: none;
+}
+
+/* responsive navbar css */
+@media screen and (max-width: 600px) {
+	nav .sideMenuButton {
+		display: flex;
+	}
+
+	nav .navbar {
+		display: none;
+	}
+
+	.sideNavigationBar {
+		display: block !important;
+	}
+}
+
+.sideNavigationBar {
 	height: 100%;
-	width: 30px;
-	cursor: pointer;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-}
-
-#menu-toggle {
+	position: fixed;
+	top: 0;
+	right: 0%;
+	background-color: rgb(0, 107, 128);
+	overflow-x: hidden;
+	transition: 0.3s ease-in;
+	padding-top: 60px;
 	display: none;
 }
-/*  Creating the menu button */
 
-.menu-button,
-.menu-button::before,
-.menu-button::after {
+.sideNavigationBar a {
+	padding: 8px 8px 8px 40px;
 	display: block;
-	background-color: black;
+	font-size: 25px;
+	font-weight: 500;
+	color: #d1d1d1;
+	transition: 0.3s;
+	text-decoration: none;
+}
+
+.sideNavigationBar a button {
+	padding: 10px 20px;
+	border-radius: 10px;
+	color: rgb(0, 60, 128);
+	font-size: 16px;
+	border-style: none;
+	font-weight: 700;
+}
+
+.sideNavigationBar a:hover {
+	color: rgb(255, 255, 255);
+}
+
+.sideNavigationBar .closeButton {
 	position: absolute;
-	height: 6px;
-	width: 32px;
-	border-radius: 3px;
-	color: white;
+	top: 10px;
+	right: 25px;
+	font-size: 20px;
+	margin-left: 50px;
 }
 
-.menu-button::before {
-	content: "";
-	margin-top: -8px;
+.line {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin: 2% 5%;
 }
 
-.menu-button::after {
-	content: "";
-	margin-top: 8px;
-}
-/*  Adding Functionality to the Hamburger Menu with CSS  */
-
-#menu-toggle:checked+.menu-button-container .menu-button::before {
-	margin-top: 0px;
-	transform: rotate(45deg);
+.line .side1 {
+	padding-right: 50px;
 }
 
-#menu-toggle:checked+.menu-button-container .menu-button {
-	background: rgba(255, 255, 255, 0);
+.side1 h1 {
+	font-size: 60px;
+	margin-bottom: 10px;
+	color: rgb(0, 41, 128);
 }
 
-#menu-toggle:checked+.menu-button-container .menu-button::after {
-	margin-top: 0px;
-	/*  transforms the hamburger icon into a cross  */
-	transform: rotate(-45deg);
+.side1 button {
+	width: 200px;
+	padding: 12px 20px;
+	border-radius: 20px;
+	border-style: none;
+	color: black;
+	font-size: 17px;
+	font-weight: 600;
 }
-/* Styling the hero section */
 
-.home {
+a {
+	text-decoration: none;
+	color: black;
+}
+
+/* Header content responsive */
+@media screen and (max-width: 980px) {
+	.side2 img {
+		width: 350px;
+	}
+
+	.side1 h1 {
+		font-size: 40px;
+	}
+
+	.side1 p {
+		font-size: 17px;
+	}
+
+	.line {
+		margin-top: 80px;
+	}
+}
+
+@media screen and (max-width: 600px) {
+	.side1 h1 {
+		font-size: 35px;
+	}
+
+	.line {
+		flex-direction: column;
+	}
+
+	.line .side1 {
+		padding: 30px;
+	}
+}
+
+/* section */
+
+section .topic a {
+	font-size: 25px;
+	font-weight: 500;
+	margin-bottom: 10px;
+}
+
+.about .boxes {
 	display: flex;
 	flex-wrap: wrap;
-	gap: 1.5rem;
-	min-height: 100vh;
-	align-items: center;
+	justify-content: space-between;
 }
 
-.home .content {
-	flex: 1 1 40rem;
-	padding-top: 6.5rem;
-}
-/* Styling the main image */
-
-.home .image {
-	flex: 1 1 30rem;
-}
-
-.home .image img {
-	width: 90%;
-	height: 90%;
-	padding: 1rem;
-	animation: float 3s linear infinite;
-}
-/* animating the main image   */
-
-@keyframes float {
-	0%,
-	100% {
-		transform: translateY(0rem);
-	}
-	50% {
-		transform: translateY(3rem);
-	}
-}
-
-.home .content h3 {
-	font-size: 5rem;
-	color: white;
-}
-/* Styling the content */
-
-.yellowColor {
-	color: yellow;
-}
-
-.mainfont {
-	font-family: "Jacques Francois Shadow", cursive;
-}
-
-.home .content p {
-	font-size: 1.7rem;
-	color: white;
-	padding: 1rem 0;
-}
-
-.heading {
+.about .boxes .box {
+	margin: 10px 20px;
+	max-width: calc(100% / 3 - 50px);
 	text-align: center;
-	font-size: 3.5rem;
-	padding: 1rem;
-	color: #666;
-}
-/* Styling the buttons  */
-
-.btn {
-	display: inline-block;
-	padding: 0.8rem 3rem;
-	border: 0.2rem solid white;
-	color: white;
-	cursor: pointer;
-	font-size: 1.7rem;
-	border-radius: 0.5rem;
-	position: relative;
-	overflow: hidden;
-	z-index: 0;
-	margin: 1rem 1rem 0 0;
+	border-radius: 12px;
+	padding: 30px 10px;
+	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.12);
+	cursor: default;
 }
 
-.btn:hover {
-	color: #fff;
-}
-/* media queries  */
+/* Contact Page */
 
-@media (max-width: 991px) {
-	html {
-		font-size: 55%;
-	}
-	header {
-		padding: 2rem;
-	}
-	section {
-		padding: 2rem;
-	}
+.contact {
+	padding: 20px;
 }
 
-@media (max-width: 768px) {
-	.menu-button-container {
-		display: flex;
-	}
-	.menu {
-		position: absolute;
-		top: 0;
-		margin-top: 50px;
-		left: 0;
+.contact .content {
+	margin: 0 auto;
+	padding: 30px 0;
+}
+
+.content .title {
+	width: 80%;
+	text-align: center;
+	font-weight: bolder;
+	font-size: 40px;
+}
+
+.title {
+	margin-bottom: 30px;
+	margin-left: 80px;
+}
+
+.contactMenu {
+	display: flex;
+	justify-content: space-evenly;
+}
+
+.input2 {
+	margin-top: 10;
+}
+
+.label1 {
+	font-size: 18px;
+	margin-top: 8px;
+	margin-bottom: 8px;
+	font-weight: bolder;
+}
+
+.contactMenu .input1 input {
+	border-radius: 13px;
+	padding: 6px;
+}
+
+.input2 input {
+	border-color: rgb(252, 244, 244);
+	width: 400px;
+}
+
+.button {
+	margin-top: 12px;
+	margin-left: 5px;
+}
+
+.button button {
+	width: 162px;
+	height: 35px;
+	border-radius: 12px;
+	border-color: transparent;
+}
+
+.button button:hover {
+	background-color: #2496ee;
+}
+
+button {
+	width: 162px;
+	height: 35px;
+	border-radius: 12px;
+	border-color: transparent;
+}
+
+button:hover {
+	background-color: #1dd4f4;
+}
+
+.rightside1 {
+	display: flex;
+	flex-direction: column;
+	margin-left: 300px;
+}
+
+.title1 {
+	font-size: 18px;
+	margin-top: 8px;
+	margin-bottom: 5px;
+	font-weight: bolder;
+}
+
+.content1 {
+	width: 450px;
+	margin-top: 2px;
+	color: grey;
+}
+
+/* Footer */
+footer {
+	background: var(--primary-color);
+	padding: 15px 0;
+	text-align: center;
+	font-family: "Poppins", sans-serif;
+}
+
+footer .footer span {
+	font-size: 17px;
+	font-weight: 400;
+	color: var(--white-color);
+}
+
+footer .footer span a {
+	font-weight: 500;
+	color: var(--white-color);
+}
+
+footer .footer span a:hover {
+	text-decoration: underline;
+}
+
+@media screen and (max-width: 1060px) {
+	.contactMenu {
 		flex-direction: column;
-		width: 100%;
-		justify-content: center;
 		align-items: center;
-		padding: 2rem
 	}
-	.menu li:hover {
-		transform: scale(1);
-	}
-	#menu-toggle~.menu li {
-		height: 0;
-		margin: 0;
-		padding: 0;
-		border: 0;
-	}
-	#menu-toggle:checked~.menu li {
-		border: 1px solid #9f9a9a;
-		height: 2.5em;
-		padding: 0.5em;
-	}
-	.menu>li {
+
+	.rightside1 {
 		display: flex;
-		justify-content: center;
-		margin: 0;
-		padding: 0.5em 0;
-		width: 100%;
-		color: black;
-		background-color: #e8e8e8;
+		flex-direction: column;
+		margin-left: 0px;
 	}
-	.menu>li:not(:last-child) {
-		border-bottom: 1px solid #444;
+
+	.content1 {
+		width: 100%;
+		margin-top: 2px;
+		color: grey;
+	}
+
+	.side2 img {
+		width: 95%;
+		height: 90%;
 	}
 }
 
-@media (max-width: 450px) {
-	html {
-		font-size: 50%;
-		overflow-x: hidden;
-		overflow-y: scroll;
-		text-align: center;
+@media screen and (max-width: 600px) {
+	.side2 img {
+		width: 100%;
+	}
+
+	section .topic a {
+		font-size: 20px;
+	}
+
+	section .topic p {
+		font-size: 5px;
+	}
+
+	.about .boxes {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.about .boxes .box {
+		max-width: 70%;
 	}
 }
